--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,2 +1,5 @@
 javac.source=1.6
 javac.compilerargs=-Xlint -Xlint:-serial
+license.file=license.txt
+nbm.module.author=junichi11
+project.license=cddl-netbeans-sun
