Add New Project Wizard

--- a/src/org/netbeans/modules/php/wordpress/Bundle.properties
+++ b/src/org/netbeans/modules/php/wordpress/Bundle.properties
@@ -1,1 +1,5 @@
-OpenIDE-Module-Name=nb-wordpress-plugin
+OpenIDE-Module-Display-Category=PHP
+OpenIDE-Module-Long-Description=\
+    Support for WordPress
+OpenIDE-Module-Name=PHP WordPress Blog/CMS
+OpenIDE-Module-Short-Description=Support for WordPress
