Improve code completion

--- a/src/org/netbeans/modules/php/wordpress/ui/options/Bundle.properties
+++ b/src/org/netbeans/modules/php/wordpress/ui/options/Bundle.properties
@@ -1,6 +1,5 @@
-
-WordPressOptionsPanel.searchButton.text=Search...
 WordPressOptionsPanel.localFileTextField.text=
 WordPressOptionsPanel.downloadUrlLabel.text=Download URL :
 WordPressOptionsPanel.jLabel1.text=Local file path :
 WordPressOptionsPanel.downloadUrlTextField.text=
+WordPressOptionsPanel.browseButton.text=Browse...
