--- a/nbproject/platform.properties
+++ b/nbproject/platform.properties
@@ -1,16 +1,12 @@
 cluster.path=\
-    ${nbplatform.active.dir}/nb:\
-    ${nbplatform.active.dir}/platform:\
-    ${nbplatform.active.dir}/apisupport:\
-    ${nbplatform.active.dir}/php:\
-    ${nbplatform.active.dir}/ide:\
     ${nbplatform.active.dir}/websvccommon:\
-    ${nbplatform.active.dir}/ergonomics:\
-    ${nbplatform.active.dir}/mobility:\
-    ${nbplatform.active.dir}/webcommon:\
-    ${nbplatform.active.dir}/java:\
-    ${nbplatform.active.dir}/enterprise:\
+    ${nbplatform.active.dir}/php:\
+    ${nbplatform.active.dir}/harness:\
     ${nbplatform.active.dir}/profiler:\
-    ${nbplatform.active.dir}/javafx:\
-    ${nbplatform.active.dir}/harness
+    ${nbplatform.active.dir}/platform:\
+    ${nbplatform.active.dir}/ide:\
+    ${nbplatform.active.dir}/apisupport:\
+    ${nbplatform.active.dir}/nb:\
+    ${nbplatform.active.dir}/java
+nbjdk.active=default
 nbplatform.active=default
