Add Create Theme Action

--- a/src/org/netbeans/modules/php/wordpress/ui/wizards/Bundle.properties
+++ b/src/org/netbeans/modules/php/wordpress/ui/wizards/Bundle.properties
@@ -22,3 +22,12 @@ NewProjectConfigurationPanel.dbHostTextField.text=localhost
 NewProjectConfigurationPanel.dbCharsetTextField.text=utf8
 NewProjectConfigurationPanel.dbCollateTextField.text=
 NewProjectConfigurationPanel.createConfigCheckBox.text=create wp-config.php
+CreateThemePanel.themeNameLabel.text=Theme Name:
+CreateThemePanel.authorLabel.text=Author: 
+CreateThemePanel.authorUriLabel.text=Author URI: 
+CreateThemePanel.descriptionLabel.text=Description: 
+CreateThemePanel.descriptionTextField.text=
+CreateThemePanel.authorUriTextField.text=
+CreateThemePanel.authorTextField.text=
+CreateThemePanel.themeNameTextField.text=
+CreateThemePanel.messageLabel.text=Please notice that license of theme is GPLv2
