--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,3 +3,5 @@ javac.compilerargs=-Xlint -Xlint:-serial
 license.file=license.txt
 nbm.module.author=junichi11
 project.license=cddl-netbeans-sun
+keystore=nbproject/private/keystore
+nbm_alias=wordpress
