Add Barebones Theme #3

--- a/src/org/netbeans/modules/php/wordpress/ui/wizards/Bundle.properties
+++ b/src/org/netbeans/modules/php/wordpress/ui/wizards/Bundle.properties
@@ -22,12 +22,14 @@ NewProjectConfigurationPanel.dbHostTextField.text=localhost
 NewProjectConfigurationPanel.dbCharsetTextField.text=utf8
 NewProjectConfigurationPanel.dbCollateTextField.text=
 NewProjectConfigurationPanel.createConfigCheckBox.text=create wp-config.php
-CreateThemePanel.themeNameLabel.text=Theme Name:
-CreateThemePanel.authorLabel.text=Author: 
-CreateThemePanel.authorUriLabel.text=Author URI: 
-CreateThemePanel.descriptionLabel.text=Description: 
-CreateThemePanel.descriptionTextField.text=
-CreateThemePanel.authorUriTextField.text=
-CreateThemePanel.authorTextField.text=
+CreateUnderscoresThemePanel.authorUriTextField.text=
+CreateUnderscoresThemePanel.descriptionTextField.text=
+CreateUnderscoresThemePanel.authorUriLabel.text=Author URI: 
+CreateUnderscoresThemePanel.descriptionLabel.text=Description: 
+CreateUnderscoresThemePanel.themeNameTextField.text=
+CreateUnderscoresThemePanel.authorTextField.text=
+CreateUnderscoresThemePanel.messageLabel.text=Please notice that license of theme is GPLv2
+CreateUnderscoresThemePanel.themeNameLabel.text=Theme Name:
+CreateUnderscoresThemePanel.authorLabel.text=Author: 
+CreateThemePanel.themeNameLabel.text=Theme Name: 
 CreateThemePanel.themeNameTextField.text=
-CreateThemePanel.messageLabel.text=Please notice that license of theme is GPLv2
