Add wp-cli option to NewConfigurationPanel #16

--- a/src/org/netbeans/modules/php/wordpress/ui/wizards/Bundle.properties
+++ b/src/org/netbeans/modules/php/wordpress/ui/wizards/Bundle.properties
@@ -33,3 +33,4 @@ CreateUnderscoresThemePanel.themeNameLabel.text=Theme Name:
 CreateUnderscoresThemePanel.authorLabel.text=Author: 
 CreateThemePanel.themeNameLabel.text=Theme Name: 
 CreateThemePanel.themeNameTextField.text=
+NewProjectConfigurationPanel.useWpCliRadioButton.text=Use wp-cli
