Improvement for getting wp-cli command list #17
- save command list as xml to Options
- getting commands  on boot
- use common command list on all wordpress project

--- a/src/org/netbeans/modules/php/wordpress/ui/options/Bundle.properties
+++ b/src/org/netbeans/modules/php/wordpress/ui/options/Bundle.properties
@@ -19,3 +19,4 @@ WordPressOptionsPanel.wpCliDownloadLocaleTextField.text=
 WordPressOptionsPanel.wpCliDownloadLocaleLabel.text=--locale=
 WordPressOptionsPanel.wpCliDownloadVersionLabel.text=--version=
 WordPressOptionsPanel.wpCliVersionLabel.text=VERSION
+WordPressOptionsPanel.wpCliGetCommandsOnBootCheckBox.text=Get command list on Boot
