Add notificatoin for upgrade #22

--- a/src/org/netbeans/modules/php/wordpress/ui/options/Bundle.properties
+++ b/src/org/netbeans/modules/php/wordpress/ui/options/Bundle.properties
@@ -20,3 +20,7 @@ WordPressOptionsPanel.wpCliDownloadLocaleLabel.text=--locale=
 WordPressOptionsPanel.wpCliDownloadVersionLabel.text=--version=
 WordPressOptionsPanel.wpCliVersionLabel.text=VERSION
 WordPressOptionsPanel.wpCliGetCommandsOnBootCheckBox.text=Get command list on Boot
+WordPressOptionsPanel.generalLabel.text=General:
+WordPressOptionsPanel.localeLabel.text=locale:
+WordPressOptionsPanel.localeTextField.text=
+WordPressOptionsPanel.checkNewVersionCheckBox.text=Check new version when project is opened
