Check Options value #22

--- a/src/org/netbeans/modules/php/wordpress/ui/options/Bundle.properties
+++ b/src/org/netbeans/modules/php/wordpress/ui/options/Bundle.properties
@@ -23,4 +23,5 @@ WordPressOptionsPanel.wpCliGetCommandsOnBootCheckBox.text=Get command list on Bo
 WordPressOptionsPanel.generalLabel.text=General:
 WordPressOptionsPanel.localeLabel.text=locale:
 WordPressOptionsPanel.localeTextField.text=
-WordPressOptionsPanel.checkNewVersionCheckBox.text=Check new version when project is opened
+WordPressOptionsPanel.checkNewVersionLabel.text=Check new version when project is opened:
+WordPressOptionsPanel.checkCoreNewVersionCheckBox.text=core
