Add notification for plugin and theme #22

--- a/src/org/netbeans/modules/php/wordpress/ui/options/Bundle.properties
+++ b/src/org/netbeans/modules/php/wordpress/ui/options/Bundle.properties
@@ -25,3 +25,5 @@ WordPressOptionsPanel.localeLabel.text=locale:
 WordPressOptionsPanel.localeTextField.text=
 WordPressOptionsPanel.checkNewVersionLabel.text=Check new version when project is opened:
 WordPressOptionsPanel.checkCoreNewVersionCheckBox.text=core
+WordPressOptionsPanel.checkThemeNewVersionCheckBox.text=theme
+WordPressOptionsPanel.checkPluginNewVersionCheckBox.text=plugin
