--- a/src/org/netbeans/modules/php/wordpress/customizer/Bundle.properties
+++ b/src/org/netbeans/modules/php/wordpress/customizer/Bundle.properties
@@ -2,3 +2,5 @@ WordPressCustomizerExtenderPanel.customContentNameLabel.text=custom content name
 WordPressCustomizerExtenderPanel.customContentNameLabel.text=custom content name:
 WordPressCustomizerExtenderPanel.customContentNameTextField.text=
 WordPressCustomizerExtenderPanel.customContentNameTextField.text=
+WordPressCustomizerExtenderPanel.toolTipText=Please check this if you want to enable as WordPress project
+WordPressCustomizerExtenderPanel.enabledCheckBox.text=enabled
