--- a/src/org/netbeans/modules/php/wordpress/ui/wizards/Bundle.properties
+++ b/src/org/netbeans/modules/php/wordpress/ui/wizards/Bundle.properties
@@ -1,4 +1,4 @@
-NewProjectConfigurationPanel.unzipLabel.text=Unzipping : 
+NewProjectConfigurationPanel.unzipLabel.text=Unzipping :
 NewProjectConfigurationPanel.unzipStatusTextField.text=
 NewProjectConfigurationPanel.useURLRadioButton.text=Use URL
 NewProjectConfigurationPanel.useLocalFileRadioButton.text=Use Local file
@@ -24,13 +24,14 @@ NewProjectConfigurationPanel.dbCollateTextField.text=
 NewProjectConfigurationPanel.createConfigCheckBox.text=create wp-config.php
 CreateUnderscoresThemePanel.authorUriTextField.text=
 CreateUnderscoresThemePanel.descriptionTextField.text=
-CreateUnderscoresThemePanel.authorUriLabel.text=Author URI: 
-CreateUnderscoresThemePanel.descriptionLabel.text=Description: 
+CreateUnderscoresThemePanel.authorUriLabel.text=Author URI:
+CreateUnderscoresThemePanel.descriptionLabel.text=Description:
 CreateUnderscoresThemePanel.themeNameTextField.text=
 CreateUnderscoresThemePanel.authorTextField.text=
 CreateUnderscoresThemePanel.messageLabel.text=Please notice that license of theme is GPLv2
 CreateUnderscoresThemePanel.themeNameLabel.text=Theme Name:
-CreateUnderscoresThemePanel.authorLabel.text=Author: 
-CreateThemePanel.themeNameLabel.text=Theme Name: 
+CreateUnderscoresThemePanel.authorLabel.text=Author:
+CreateThemePanel.themeNameLabel.text=Theme Name:
 CreateThemePanel.themeNameTextField.text=
 NewProjectConfigurationPanel.useWpCliRadioButton.text=Use wp-cli
+CreatePermalinkHtaccessPanel.messageLabel.text=MESSAGE
