--- a/src/org/netbeans/modules/php/wordpress/ui/wizards/Bundle.properties
+++ b/src/org/netbeans/modules/php/wordpress/ui/wizards/Bundle.properties
@@ -35,3 +35,21 @@ CreateThemePanel.themeNameLabel.text=Theme Name:
 CreateThemePanel.themeNameTextField.text=
 NewProjectConfigurationPanel.useWpCliRadioButton.text=Use wp-cli
 CreatePermalinkHtaccessPanel.messageLabel.text=MESSAGE
+CreateChildThemePanel.parentThemeLabel.text=Parent Theme:
+CreateChildThemePanel.childThemeNameLabel.text=Child Theme Name:
+CreateChildThemePanel.childThemeNameTextField.text=
+CreateChildThemePanel.errorLabel.text=ERROR
+CreateChildThemePanel.childThemeUriLabel.text=Child Theme URI:
+CreateChildThemePanel.descriptionLabel.text=Description:
+CreateChildThemePanel.versionLabel.text=Version:
+CreateChildThemePanel.authorLabel.text=Author:
+CreateChildThemePanel.tagsLabel.text=Tags:
+CreateChildThemePanel.textDomainLabel.text=Text Domain:
+CreateChildThemePanel.childThemeUriTextField.text=
+CreateChildThemePanel.descriptionTextField.text=
+CreateChildThemePanel.versionTextField.text=1.0.0
+CreateChildThemePanel.authorTextField.text=
+CreateChildThemePanel.tagsTextField.text=
+CreateChildThemePanel.textDomainTextField.text=
+CreateChildThemePanel.authorUriLabel.text=Author URI:
+CreateChildThemePanel.authorUriTextField.text=
