Improvement for Child Theme Name
- Change child theme name to child directory name
- Add child theme name text field

--- a/src/org/netbeans/modules/php/wordpress/ui/wizards/Bundle.properties
+++ b/src/org/netbeans/modules/php/wordpress/ui/wizards/Bundle.properties
@@ -36,8 +36,6 @@ CreateThemePanel.themeNameTextField.text=
 NewProjectConfigurationPanel.useWpCliRadioButton.text=Use wp-cli
 CreatePermalinkHtaccessPanel.messageLabel.text=MESSAGE
 CreateChildThemePanel.parentThemeLabel.text=Parent Theme:
-CreateChildThemePanel.childThemeNameLabel.text=Child Theme Name:
-CreateChildThemePanel.childThemeNameTextField.text=
 CreateChildThemePanel.errorLabel.text=ERROR
 CreateChildThemePanel.childThemeUriLabel.text=Child Theme URI:
 CreateChildThemePanel.descriptionLabel.text=Description:
@@ -53,3 +51,7 @@ CreateChildThemePanel.tagsTextField.text=
 CreateChildThemePanel.textDomainTextField.text=
 CreateChildThemePanel.authorUriLabel.text=Author URI:
 CreateChildThemePanel.authorUriTextField.text=
+CreateChildThemePanel.childDirectoryNameLabel.text=Child Directory Name:
+CreateChildThemePanel.childDirectoryNameTextField.text=
+CreateChildThemePanel.childThemeNameLabel.text=Child Theme Name:
+CreateChildThemePanel.childThemeNameTextField.text=
