--- a/src/org/netbeans/modules/php/wordpress/ui/wizards/Bundle.properties
+++ b/src/org/netbeans/modules/php/wordpress/ui/wizards/Bundle.properties
@@ -5,7 +5,6 @@ NewProjectConfigurationPanel.useLocalFileRadioButton.text=Use Local file
 NewProjectConfigurationPanel.localFileLabel.text=
 NewProjectConfigurationPanel.urlLabel.text=
 NewProjectConfigurationPanel.formatCheckBox.text=Set format to project
-NewProjectConfigurationPanel.jLabel1.text=DB_NAME:
 NewProjectConfigurationPanel.dbNameTextField.text=
 NewProjectConfigurationPanel.dbUserLabel.text=DB_USER:
 NewProjectConfigurationPanel.dbUserTextField.text=
@@ -55,3 +54,4 @@ CreateChildThemePanel.childDirectoryNameLabel.text=Child Directory Name:
 CreateChildThemePanel.childDirectoryNameTextField.text=
 CreateChildThemePanel.childThemeNameLabel.text=Child Theme Name:
 CreateChildThemePanel.childThemeNameTextField.text=
+NewProjectConfigurationPanel.dbNameLabel.text=DB_NAME:
