--- a/src/org/netbeans/modules/php/wordpress/ui/wizards/Bundle.properties
+++ b/src/org/netbeans/modules/php/wordpress/ui/wizards/Bundle.properties
@@ -55,3 +55,7 @@ CreateChildThemePanel.childDirectoryNameTextField.text=
 CreateChildThemePanel.childThemeNameLabel.text=Child Theme Name:
 CreateChildThemePanel.childThemeNameTextField.text=
 NewProjectConfigurationPanel.dbNameLabel.text=DB_NAME:
+CreateMinimumBlankThemePanel.errorMessageLabel.text=ERROR
+CreateMinimumBlankThemePanel.themeDirectoryNameTextField.text=
+CreateMinimumBlankThemePanel.themeDirectoryNameLabel.text=Theme Directory Name:
+CreateMinimumBlankThemePanel.descriptionLabel.text=Just create a style.css and an empty index.php
