Improve message labels for NewProejctConfigurationPanel

--- a/src/org/netbeans/modules/php/wordpress/ui/wizards/Bundle.properties
+++ b/src/org/netbeans/modules/php/wordpress/ui/wizards/Bundle.properties
@@ -4,8 +4,8 @@ NewProjectConfigurationPanel.useURLRadioButton.text=Use URL
 NewProjectConfigurationPanel.useLocalFileRadioButton.text=Use Local file
 NewProjectConfigurationPanel.localFileLabel.text=
 NewProjectConfigurationPanel.urlLabel.text=
-NewProjectConfigurationPanel.formatCheckBox.text=Set format to project
-NewProjectConfigurationPanel.createConfigCheckBox.text=create wp-config.php
+NewProjectConfigurationPanel.formatCheckBox.text=Set format options for WordPress to this project
+NewProjectConfigurationPanel.createConfigCheckBox.text=Create a wp-config.php
 CreateUnderscoresThemePanel.authorUriTextField.text=
 CreateUnderscoresThemePanel.descriptionTextField.text=
 CreateUnderscoresThemePanel.authorUriLabel.text=Author URI:
