Add a wp-content directory path to a project settings #62
- First of all, search the default wp-content directory.

--- a/src/org/netbeans/modules/php/wordpress/customizer/Bundle.properties
+++ b/src/org/netbeans/modules/php/wordpress/customizer/Bundle.properties
@@ -12,3 +12,6 @@ WordPressCustomizerExtenderPanel.wordPressRootLabel.text=WordPress Root:
 WordPressCustomizerExtenderPanel.wordPressRootTextField.text=
 WordPressCustomizerExtenderPanel.themesTextField.text=
 WordPressCustomizerExtenderPanel.customDirectoryPathLabel.toolTipText=empty is default directory structure
+WordPressCustomizerExtenderPanel.wpContentLabel.text=wp-content:
+WordPressCustomizerExtenderPanel.wpContentTextField.text=
+WordPressCustomizerExtenderPanel.jLabel1.text=(If wp-content is not in the WordPress Root)
